--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">BtcTurkCase</string>
+    <string name="compose">Compose</string>
+    <string name="views">Views</string>
+    <string name="series_x">Series %d</string>
+    <string name="x_axis">x-axis</string>
+    <string name="y_axis">y-axis</string>
+    <string name="chart_x">Chart %d</string>
 </resources>
